new docs + patched things up - add changelog next

--- a/posts/main/guides/gotchas.mdx
+++ b/posts/main/guides/gotchas.mdx
@@ -45,7 +45,7 @@ export default function App() {
 
 Simply put, you can't. The `Cache API` is built to handle only `GET` requests and not built to handle the intricacies of other request methods. If you want to cache other request methods, I would recommend taking a look at the `IndexedDB API`. A powerful API that allows you to store data in the browser in a database-like manner.
 
-## Remix PWA & Remix SPA
+{/* ## Remix PWA & Remix SPA
 
 Remix PWA is configured out of the box for Remix Vite (default SSR). For Remix SPA apps, I would recommend using [Vite PWA](https://vite-pwa-org.netlify.app/frameworks/remix.html) for a few reasons.
 
@@ -53,4 +53,4 @@ Firstly, Remix PWA would still work (might need some tweaking) with SPA mode, as
 
 The second reason is that Vite PWA is more rugged (been around for a while) and is more suited to handling SPA projects from the very start. As opposed to Remix PWA that utilises Remix Vite's plugin SSR system to handle the PWA setup.
 
-Lastly, Vite PWA is a fantastic library to use. With an awesome maintainer and a great community, it's a no-brainer to use it where Remix PWA isn't strong-footed :).
+Lastly, Vite PWA is a fantastic library to use. With an awesome maintainer and a great community, it's a no-brainer to use it where Remix PWA isn't strong-footed :). */}
