--- a/posts/main/guides/runtimes.mdx
+++ b/posts/main/guides/runtimes.mdx
@@ -56,7 +56,7 @@ It contains the following:
 
 - `entry`: This is an object containing one property: `module`, which is your entry worker code. Every thing exported from your entry worker is available via this object.
 - `routes`: A manifest (styled like Remix server manifest) that contains all routes and the worker codes associated with them
-- `assets`: A list of the assets the Remix app utilizes. In `development`, this is just the contents of the `public` folder. In `production` mode, it is the assets contained in the `buildDirectory`.
+- `assets`: A list of the assets the Remix app utilizes. In `development`, this is just the contents of the `public` folder. In `production` mode, it is the assets contained in the `build/client`.
 
 Where routes basically looks like:
 
