--- a/posts/main/utils/vite-config.mdx
+++ b/posts/main/utils/vite-config.mdx
@@ -38,7 +38,7 @@ By default, the service worker is registered automatically.
 
 ### `workerBuildDirectory`
 
-The `workerBuildDirectory` option of type: `string` is used to set the directory where the service worker is built to. **Default**: `public`. Note the lack of leading or trailing slashes.
+The `workerBuildDirectory` option of type: `string` is used to set the directory where the service worker is built to. **Default**: `public` in dev and `build/client` in production. Note the lack of leading or trailing slashes.
 
 ### `scope`
 
